workloads/homepage/kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage

spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app.kubernetes.io/name: homepage

  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage

    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true

      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:latest"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false

            capabilities:
              drop:
                - ALL

            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000

            seccompProfile:
              type: RuntimeDefault

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15

          volumeMounts:
            - mountPath: /app/config/custom.js
              name: homepage-config
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: homepage-config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: homepage-config
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/config/logs
              name: logs

      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
